<resources>
    <string name="app_name">StudentGrade</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="label_student">Student</string>
    <string name="lable_add">Add</string>
    <string name="textView_add">Add Stutent</string>
    <string name="editText_name">Name</string>
    <string name="editText_grade">Grade</string>
    <string name="editText_info">Info</string>
    <string name="title_clear">Clear Data</string>
    <string name="title_exit">Exit</string>
    <string name="button_add" translatable="false">Let me see!</string>
</resources>